fix serializable problem